# ChangeLog for games-arcade/gdash
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gdash-20130427 (26 feb 2014)

  26 feb 2014; Vincent Hardy <vincent.hardy.be@gmail.com>
